Fixed down arrow not showing bug. Made navbar mobile compatible.

--- a/css/main.css
+++ b/css/main.css
@@ -645,6 +645,15 @@ a:active {
   .navbar-nav li a:hover {
     background-color: transparent; }
 
+.navbar-collapse.in .navbar-nav, .navbar-collapse.collapsing .navbar-nav {
+  background-color: white;
+  margin-top: -11px;
+  padding-top: 8px; }
+  .navbar-collapse.in .navbar-nav li, .navbar-collapse.collapsing .navbar-nav li {
+    display: block;
+    height: 40px;
+    line-height: 40px; }
+
 .navbar {
   height: 100px;
   padding: 0 3%;
@@ -770,5 +779,69 @@ a:active {
     margin-top: 20px;
     float: left;
     color: #9470dc; }
+
+.navbar-toggle {
+  margin-top: 15px;
+  background-color: #9470dc; }
+
+.navbar-toggle {
+  position: relative;
+  float: right;
+  margin-top: 15px;
+  margin-right: 15px;
+  margin-bottom: 8px;
+  background-image: none;
+  border-image-source: initial;
+  border-image-slice: initial;
+  border-image-width: initial;
+  border-image-outset: initial;
+  border-image-repeat: initial;
+  padding: 9px 10px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: transparent;
+  border-radius: 4px; }
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  clip: rect(0px 0px 0px 0px);
+  border-image-source: initial;
+  border-image-slice: initial;
+  border-image-width: initial;
+  border-image-outset: initial;
+  border-image-repeat: initial;
+  padding: 0px;
+  margin: -1px;
+  overflow: hidden;
+  border-width: 0px;
+  border-style: initial;
+  border-color: initial; }
+
+.navbar-fixed-bottom .navbar-collapse, .navbar-fixed-top .navbar-collapse {
+  max-height: 340px; }
+
+.navbar-collapse.in {
+  overflow-y: auto; }
+
+.collapse.in {
+  display: block; }
+
+.navbar-collapse {
+  padding-right: 15px;
+  padding-left: 15px;
+  overflow-x: visible;
+  box-shadow: rgba(255, 255, 255, 0.09804) 0px 1px 0px inset;
+  border-top: 1px solid transparent; }
+
+.navbar-toggle .icon-bar {
+  background-color: #FFF; }
+
+.navbar-toggle .icon-bar {
+  display: block;
+  width: 22px;
+  height: 2px;
+  border-radius: 1px; }
 
 /*# sourceMappingURL=main.css.map */
